snapshots/syntax/library/statements/randomize/randomize_with_expression.snap
---
source: src/syntax/library/statements/runtime_state/randomize.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RandomizeStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RandomizeKeyword
                  text: Randomize
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: x
                - kind: Whitespace
                  text: " "
                - kind: MultiplicationOperator
                  text: "*"
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "100"
                - kind: Whitespace
                  text: " "
                - kind: AdditionOperator
                  text: +
                - kind: Whitespace
                  text: " "
                - kind: IntegerLiteral
                  text: "42"
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
